fixed spacing below the form

--- a/public/styles.css
+++ b/public/styles.css
@@ -26,7 +26,7 @@ p {
 }
 
 #search-form {
-  margin: 20px 0;
+  margin-top: 20px;
 }
 
 #search-form input, #search-form label {
@@ -59,7 +59,7 @@ p {
 
 #find-character-button {
   display: block;
-  margin: 20px auto;
+  margin: 20px auto 5px auto;
   width: 150px;
   height: 50px;
   background-color: #263238;
